--- a/src/app/pages/media-hub/media-lightbox/media-lightbox.component.html
+++ b/src/app/pages/media-hub/media-lightbox/media-lightbox.component.html
@@ -25,7 +25,7 @@
                         <img class="w-100 h-100" *ngIf="file.isImage(); else textView" [src]=" file.fullPath"
                             [alt]="file.name">
                         <ng-template #textView>
-                            <h6 class="mb-0 p-2 bg-white">{{file.name}}</h6>
+                            <h6 class="mb-0 p-2 bg-white h-100">{{file.name}}</h6>
                         </ng-template>
                     </div>
                 </ng-container>
