--- a/src/app/pages/portal/login/login.component.html
+++ b/src/app/pages/portal/login/login.component.html
@@ -1,31 +1,19 @@
 <div class="container h-100">
   <div class="row align-items-center justify-content-center h-100">
     <div class="col-12 col-md-8 col-lg-5">
-      <mat-card>
-        <mat-card-header class="justify-content-center">
-          <mat-card-title class="text-center">
-            <h5>Login in to continue</h5>
-            <p class="font-weight-bold">Angular Buildozer</p>
-          </mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <!-- TODO: After finishing the auth module consider using form container -->
-
-          <form [formGroup]="form">
-            <app-field-factory *ngFor="let field of form.fields" [field]="field"></app-field-factory>
-            <mat-checkbox id="rememberMe" #rememberMeCheckBox>Remember me!</mat-checkbox>
-            <div class="text-right my-3">
-              <button id="submitButton" [disabled]="!form.valid" (click)="login(rememberMeCheckBox)" mat-flat-button
-                color="primary" class="text-white text-center w-100">{{ 'button_login' | translate }}</button>
-            </div>
-          </form>
-        </mat-card-content>
-        <mat-card-actions>
-          <a mat-button class="text-nounderline" id="registerButton" [routerLink]="['../', 'register']">
+      <app-form-container title="Login in to continue" [formGroup]="form"
+        (onSubmit)="login($event, rememberMeCheckBox)">
+        <span form-header>Angular Buildozer</span>
+        <section form-body>
+          <app-field-factory *ngFor="let field of form.fields" [field]="field"></app-field-factory>
+          <mat-checkbox id="rememberMe" [checked]="true" #rememberMeCheckBox>Remember me!</mat-checkbox>
+        </section>
+        <section form-footer>
+          <a mat-button class="text-nounderline mt-2" id="registerButton" [routerLink]="['../', 'register']">
             <small class="text--accent">{{ 'button_signup' | translate }}</small>
           </a>
-        </mat-card-actions>
-      </mat-card>
+        </section>
+      </app-form-container>
     </div>
   </div>
 </div>
