--- a/src/app/pages/portal/register/register.component.html
+++ b/src/app/pages/portal/register/register.component.html
@@ -1,22 +1,10 @@
 <div class="container h-100">
   <div class="row align-items-center justify-content-center h-100">
     <div class="col-12 col-md-8 col-lg-6">
-      <mat-card>
-        <mat-card-header class="justify-content-center">
-          <mat-card-title>Register in our system</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <form [formGroup]="form">
-            <app-field-factory *ngFor="let field of form.fields" [field]="field"></app-field-factory>
-            <section>
-              <div class="text-right my-3">
-                <button (click)="register()" mat-flat-button color="primary"
-                  class="text-white text-center w-100">{{ 'button_register' | translate }}</button>
-              </div>
-            </section>
-          </form>
-        </mat-card-content>
-      </mat-card>
+      <app-form-container title="Register in our system" (onSubmit)="register($event)" [formGroup]="form">
+        <app-field-factory *ngFor="let field of form.fields" [field]="field"></app-field-factory>
+
+      </app-form-container>
     </div>
   </div>
 </div>
