--- a/src/app/pages/chat/chat-card-footer/chat-card-footer.component.html
+++ b/src/app/pages/chat/chat-card-footer/chat-card-footer.component.html
@@ -27,17 +27,17 @@
         <div *ngIf="base64Files.length" class="d-flex pt-3 px-2 overflow-auto flex-fill">
             <div class="attachment-box mx-1 position-relative" *ngFor="let file of files; let index = index;">
                 <mat-icon (click)="disposeFile(index)"
-                    class="pointer text-muted position-absolute bg-white border-radius-1">close
+                    class="pointer text-muted position-absolute bg-white border-radius-1 shadow">close
                 </mat-icon>
                 <img *ngIf="isImage(file.name); else documentType" class="img-fluid h-100 border-radius-1"
                     [src]="base64Files[index] | async">
                 <ng-template #documentType>
-                    <p class="bg-white px-2 mb-0 border-radius-1 text-truncate document-name shadow-sm">{{file.name}}
+                    <p class="bg-white px-2 mb-0 border-radius-1 text-truncate document-name shadow">{{file.name}}
                     </p>
                 </ng-template>
             </div>
         </div>
-        <div class="d-flex align-items-center px-2">
+        <div class="d-flex align-items-center px-2 mt-2">
             <textarea class="border-0 border-radius-1" [formControl]="messageFormControl" placeholder="Write a message"
                 cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="1"
                 cdkAutosizeMaxRows="4"></textarea>
