--- a/src/app/pages/portal/login/login.component.html
+++ b/src/app/pages/portal/login/login.component.html
@@ -1,18 +1,17 @@
 <div class="container h-100">
   <div class="row align-items-center justify-content-center h-100">
-    <div class="col-12 col-md-8 col-lg-5">
+    <div class="col-12 col-md-8 col-lg-6">
       <app-form-container title="Login in to continue" [formGroup]="form" (onSubmit)="login($event)">
         <span form-header>Angular Buildozer</span>
-        <section form-body>
-          <app-field-factory *ngFor="let field of form.fields" [field]="field"></app-field-factory>
+        <ng-container ngProjectAs="form-body">
           <app-field-factory [field]="rememberMeCheckBox"></app-field-factory>
-          <a mat-button [routerLink]="['../', 'forgot']">
-            <small class="text-muted">{{ 'forgot_password' | translate }}</small>
-          </a>
-        </section>
-        <section form-footer>
+        </ng-container>
+        <section form-footer class="d-flex align-items-center flex-column">
           <a mat-button id="registerButton" [routerLink]="['../', 'register']">
             <small class="text--accent">{{ 'button_signup' | translate }}</small>
+          </a>
+          <a mat-button class="align-self-start" [routerLink]="['../', 'forgot']">
+            <small class="text-muted">{{ 'forgot_password' | translate }}</small>
           </a>
         </section>
       </app-form-container>
