--- a/src/app/partials/form/form-container/form-container.component.html
+++ b/src/app/partials/form/form-container/form-container.component.html
@@ -10,7 +10,13 @@
         </mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-        <app-field-factory *ngFor="let field of formGroup.fields" [field]="field"></app-field-factory>
+        <ng-container *ngFor="let section of sections">
+            <div class="d-flex flex-wrap">
+                <ng-container *ngFor="let field of fields[section]">
+                    <app-field-factory class="pr-4" [field]="$any(field)"></app-field-factory>
+                </ng-container>
+            </div>
+        </ng-container>
         <ng-content select="[form-body]"></ng-content>
     </mat-card-content>
     <mat-card-actions>
