--- a/src/app/partials/form/form-container/form-container.component.scss
+++ b/src/app/partials/form/form-container/form-container.component.scss
@@ -3,7 +3,7 @@ $zIndex: 99;
   display: block;
   position: relative;
   &::before {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     width: 100%;
@@ -18,6 +18,10 @@ $zIndex: 99;
       background-color: rgba(255, 255, 255, 0.5);
       z-index: $zIndex;
     }
+  }
+  app-field-factory {
+    min-width: calc(100% / 3);
+    flex-grow: 1;
   }
 }
 mat-progress-bar {
