css tweaking, add submission event

--- a/src/app/partials/form/form-container/form-container.component.html
+++ b/src/app/partials/form/form-container/form-container.component.html
@@ -3,8 +3,8 @@
 </ng-container>
 
 <mat-card>
-    <mat-card-header class="py-3 text-uppercase">
-        <mat-card-title>{{ title}}</mat-card-title>
+    <mat-card-header class="py-3 ">
+        <mat-card-title class="text-uppercase">{{ title}}</mat-card-title>
         <mat-card-subtitle>
             <ng-content select="[form-header]"></ng-content>
         </mat-card-subtitle>
