--- a/src/app/partials/form/form-factory/form-factory.component.html
+++ b/src/app/partials/form/form-factory/form-factory.component.html
@@ -11,7 +11,8 @@
         <mat-hint>{{field.hint}}</mat-hint>
         <input [id]="field.id" #input type="password" [attr.autocomplete]="field.autocomplete" matInput
             [formControl]="field">
-        <mat-icon class="pointer text-muted" [togglePasswod]="input" matSuffix>lock</mat-icon>
+        <mat-icon class="pointer text-muted font-size-20 position-relative bottom-4" [togglePasswod]="input" matSuffix>
+            lock</mat-icon>
     </mat-form-field>
 </ng-container>
 <ng-container *ngIf="field.typeOf(types.TEXTAREA)">
@@ -50,8 +51,8 @@
     <mat-form-field>
         <mat-label>{{field.label | translate}}</mat-label>
         <mat-select [multiple]="field.multiple" [id]="field.id" [formControl]="field">
-            <mat-option *ngFor="let option of (field.options | async)" [value]="option.value">
-                {{option.title}}
+            <mat-option *ngFor="let option of (field.options | async)" [value]="option.key">
+                {{option.value}}
             </mat-option>
         </mat-select>
     </mat-form-field>
@@ -59,8 +60,8 @@
 <ng-container *ngIf="field.typeOf(types.RADIO)">
     <mat-label>{{field.label | translate}}</mat-label>
     <mat-radio-group [id]="field.id" class="d-flex flex-column">
-        <mat-radio-button *ngFor="let option of (field.options | async)" [value]="option.value">
-            {{option.title}}
+        <mat-radio-button *ngFor="let option of (field.options | async)" [value]="option.key">
+            {{option.value}}
         </mat-radio-button>
     </mat-radio-group>
 </ng-container>
