fixed login field order

--- a/src/app/pages/portal/login/login.component.html
+++ b/src/app/pages/portal/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="container h-100">
   <div class="row align-items-center justify-content-center h-100">
-    <div class="col-12 col-md-8 col-lg-6">
+    <div class="col-12 col-md-8 col-lg-5">
       <app-form-container title="Login in to continue" [formGroup]="form" (onSubmit)="login($event)">
-        <span form-header>Angular Buildozer</span>
-        <ng-container ngProjectAs="form-body">
+        <span form-header class="text-uppercase">Angular Buildozer</span>
+        <ng-container ngProjectAs="[form-body]">
           <app-field-factory [field]="rememberMeCheckBox"></app-field-factory>
         </ng-container>
         <section form-footer class="d-flex align-items-center flex-column">
