added forgot password form

--- a/src/app/layout/container/container.component.html
+++ b/src/app/layout/container/container.component.html
@@ -29,6 +29,6 @@
   </app-content>
 </app-navbar>
 
-<button mat-mini-fab class="floating-button" (click)="openCreateChatCard()">
+<button mat-mini-fab class="floating-button line-height-26 font-size-20" (click)="openCreateChatCard()">
   <mat-icon>add_comment</mat-icon>
 </button>
