--- a/src/app/pages/portal/forget-password/forget-password.component.html
+++ b/src/app/pages/portal/forget-password/forget-password.component.html
@@ -1,1 +1,10 @@
-<p>forget-password works!</p>
+<div class="container h-100">
+    <div class="row align-items-center justify-content-center h-100">
+        <div class="col-12 col-md-8">
+            <app-form-container title="Forgot password" [formGroup]="form" (onSubmit)="onSubmit($event)">
+                <span form-header>Enter your information below and we'll help you to reset your password</span>
+                <button form-footer color="primary" mat-button [routerLink]="['../', 'login']">Login</button>
+            </app-form-container>
+        </div>
+    </div>
+</div>
