fixed hardcoded label in country control component

--- a/src/app/widget/country-control/country-control.component.html
+++ b/src/app/widget/country-control/country-control.component.html
@@ -1,9 +1,9 @@
 <mat-form-field>
-    <mat-label>{{placeholder || 'Country'}}</mat-label>
-    <mat-select matInput [formControl]="formControl" (selectionChange)="updateModel($event?.value)">
+    <mat-label>{{formControl.label}}</mat-label>
+    <mat-select matInput [formControl]="formControl" (valueChange)="updateModel($event?.value)">
         <mat-select-trigger>
             <div class="iti__flag-box">
-                <div class="iti__flag iti__{{currentCountry?.iso2}}"></div>
+                <div class="iti__flag iti__{{currentCountry?.iso2?.toLowerCase()}}"></div>
             </div>
             {{currentCountry?.name}}
         </mat-select-trigger>
