move top progress bar to work only in container component

--- a/src/app/layout/container/container.component.html
+++ b/src/app/layout/container/container.component.html
@@ -1,5 +1,6 @@
 <app-navbar>
   <app-content>
+    <app-progress-bar></app-progress-bar>
     <app-toolbar class="w-100 d-flex justify-content-end align-items-center bg-white border-bottom"></app-toolbar>
     <section class="router-container">
       <app-sidebar name="chat_bar" [right]="true">
