--- a/src/app/partials/form/form-container/form-container.component.html
+++ b/src/app/partials/form/form-container/form-container.component.html
@@ -10,18 +10,23 @@
         </mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-        <ng-container *ngFor="let section of sections">
-            <div class="d-flex flex-wrap">
-                <ng-container *ngFor="let field of fields[section]">
-                    <app-field-factory class="pr-4" [field]="$any(field)"></app-field-factory>
-                </ng-container>
-            </div>
+        <ng-container *ngIf="!external">
+            <ng-container *ngFor="let section of sections">
+                <div class="d-flex flex-wrap">
+                    <ng-container *ngFor="let field of fields[section]">
+                        <app-field-factory class="pr-4" [field]="$any(field)"></app-field-factory>
+                    </ng-container>
+                </div>
+            </ng-container>
         </ng-container>
         <ng-content select="[form-body]"></ng-content>
     </mat-card-content>
     <mat-card-actions>
         <div class="text-center">
-            <button color="primary" (click)="submit()" [disabled]="formGroup?.invalid" mat-raised-button>Submit</button>
+            <button color="primary" class="px-5 py-1" (click)="submit()" [disabled]="formGroup?.invalid"
+                mat-raised-button>
+                Submit
+            </button>
         </div>
         <ng-content select="[form-footer]"></ng-content>
     </mat-card-actions>
