--- a/src/app/partials/form/form-container/form-container.component.scss
+++ b/src/app/partials/form/form-container/form-container.component.scss
@@ -26,6 +26,7 @@ $zIndex: 99;
   }
 }
 mat-progress-bar {
+  position: absolute;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   z-index: $zIndex + 1;
