add account verification and pincode method to forgot password

--- a/src/app/partials/form/form-container/form-container.component.scss
+++ b/src/app/partials/form/form-container/form-container.component.scss
@@ -3,7 +3,7 @@ $zIndex: 99;
   display: block;
   position: relative;
   &::before {
-    content: "";
+    content: '';
     display: block;
     position: absolute;
     width: 100%;
