--- a/src/app/pages/portal/forget-password/forget-password.component.html
+++ b/src/app/pages/portal/forget-password/forget-password.component.html
@@ -1,10 +1,54 @@
 <div class="container h-100">
     <div class="row align-items-center justify-content-center h-100">
-        <div class="col-12 col-md-8">
-            <app-form-container title="Forgot password" [formGroup]="form" (onSubmit)="onSubmit($event)">
-                <span form-header>Enter your information below and we'll help you to reset your password</span>
-                <button form-footer color="primary" mat-button [routerLink]="['../', 'login']">Login</button>
-            </app-form-container>
+        <div class="col-12 col-md-7">
+            <ng-container *ngIf="steps[0]">
+                <app-form-container title="Forgot password" [formGroup]="form" (onSubmit)="checkUser($event)">
+                    <span form-header>Enter your information below and we'll help you to reset your password</span>
+                    <ng-container ngProjectAs="[form-footer]" [ngTemplateOutlet]="loginButton"></ng-container>
+                </app-form-container>
+            </ng-container>
+            <ng-container *ngIf="steps[1]">
+                <app-form-container title="Confirm your account information" [formGroup]="forgotPasswordForm"
+                    [external]="true" (onSubmit)="submitVerification()">
+                    <span form-header>How would you like to verify your account</span>
+                    <ng-container ngProjectAs="[form-body]">
+                        <mat-accordion>
+                            <mat-expansion-panel [expanded]="true" (afterCollapse)="forgotPasswordForm.reset()"
+                                [disabled]="!accountVerifiedResponse.emailVerified">
+                                <mat-expansion-panel-header>
+                                    <mat-panel-title class="font-weight-500">
+                                        Receive an email
+                                    </mat-panel-title>
+                                </mat-expansion-panel-header>
+                                <app-field-factory [field]="forgotPasswordForm.get('email')"></app-field-factory>
+                                <p>By continuing you confirm that you're authorized to access this email account.</p>
+                            </mat-expansion-panel>
+                            <mat-expansion-panel (afterCollapse)="forgotPasswordForm.reset()"
+                                [disabled]="!accountVerifiedResponse.mobileVerified">
+                                <mat-expansion-panel-header>
+                                    <mat-panel-title class="font-weight-500">
+                                        Receive a text message
+                                    </mat-panel-title>
+                                </mat-expansion-panel-header>
+                                <app-field-factory [field]="forgotPasswordForm.get('mobile')"></app-field-factory>
+                                <p>By continuing you confirm that you're authorized to use this phone number and agree
+                                    to receive text messages.</p>
+                            </mat-expansion-panel>
+                        </mat-accordion>
+                    </ng-container>
+                    <ng-container ngProjectAs="[form-footer]" [ngTemplateOutlet]="loginButton"></ng-container>
+                </app-form-container>
+            </ng-container>
+            <ng-container *ngIf="steps[2]">
+                <app-pincode-box></app-pincode-box>
+            </ng-container>
+            <ng-container *ngIf="steps[3]">
+                reset password logic
+            </ng-container>
         </div>
     </div>
 </div>
+
+<ng-template #loginButton>
+    <button color="primary" mat-button [routerLink]="['../', 'login']">Login</button>
+</ng-template>
