--- a/src/app/pages/portal/forget-password/forget-password.component.html
+++ b/src/app/pages/portal/forget-password/forget-password.component.html
@@ -2,19 +2,20 @@
     <div class="row align-items-center justify-content-center h-100">
         <div class="col-12 col-md-7">
             <ng-container *ngIf="steps[0]">
-                <app-form-container title="Forgot password" [formGroup]="form" (onSubmit)="checkUser($event)">
+                <app-form-container title="Forgot password" [formGroup]="verificationForm"
+                    (onSubmit)="checkUser($event)">
                     <span form-header>Enter your information below and we'll help you to reset your password</span>
                     <ng-container ngProjectAs="[form-footer]" [ngTemplateOutlet]="loginButton"></ng-container>
                 </app-form-container>
             </ng-container>
             <ng-container *ngIf="steps[1]">
                 <app-form-container title="Confirm your account information" [formGroup]="forgotPasswordForm"
-                    [external]="true" (onSubmit)="submitVerification()">
+                    [external]="true" (onSubmit)="sendPincode($event)">
                     <span form-header>How would you like to verify your account</span>
                     <ng-container ngProjectAs="[form-body]">
                         <mat-accordion>
                             <mat-expansion-panel [expanded]="true" (afterCollapse)="forgotPasswordForm.reset()"
-                                [disabled]="!accountVerifiedResponse.emailVerified">
+                                [disabled]="!accountVerificationResponse.emailVerified">
                                 <mat-expansion-panel-header>
                                     <mat-panel-title class="font-weight-500">
                                         Receive an email
@@ -24,7 +25,7 @@
                                 <p>By continuing you confirm that you're authorized to access this email account.</p>
                             </mat-expansion-panel>
                             <mat-expansion-panel (afterCollapse)="forgotPasswordForm.reset()"
-                                [disabled]="!accountVerifiedResponse.mobileVerified">
+                                [disabled]="!accountVerificationResponse.mobileVerified">
                                 <mat-expansion-panel-header>
                                     <mat-panel-title class="font-weight-500">
                                         Receive a text message
@@ -40,7 +41,8 @@
                 </app-form-container>
             </ng-container>
             <ng-container *ngIf="steps[2]">
-                <app-pincode-box></app-pincode-box>
+                <app-pincode-box [data]="{proxy: sendPincodeType, type: 'account'}" (onSubmit)="checkPincode($event)">
+                </app-pincode-box>
             </ng-container>
             <ng-container *ngIf="steps[3]">
                 reset password logic
