--- a/src/app/layout/toolbar/toolbar.component.scss
+++ b/src/app/layout/toolbar/toolbar.component.scss
@@ -1,8 +1,8 @@
-@import 'mixins';
-@import 'variables';
+@import "mixins";
+@import "variables";
 $toolbar-height: map-get(
   $map: $layout_dimensions,
-  $key: toolbar-height
+  $key: toolbar-height,
 );
 :host {
   .toolbar-button {
