--- a/src/app/layout/_layout.theme.scss
+++ b/src/app/layout/_layout.theme.scss
@@ -2,5 +2,5 @@
 @import './components/navbar-item/navbar-item.theme';
 @mixin layout_theme($theme) {
   @include navbar_collapse($theme);
-  @include navbar-item($theme);
+  @include navbar_item($theme);
 }
