--- a/src/app/pages/portal/forget-password/forget-password.component.html
+++ b/src/app/pages/portal/forget-password/forget-password.component.html
@@ -9,29 +9,29 @@
                 </app-form-container>
             </ng-container>
             <ng-container *ngIf="steps[1]">
-                <app-form-container title="Confirm your account information" [formGroup]="forgotPasswordForm"
+                <app-form-container title="Confirm your account information" [formGroup]="sendPincodeForm"
                     [external]="true" (onSubmit)="sendPincode($event)">
                     <span form-header>How would you like to verify your account</span>
                     <ng-container ngProjectAs="[form-body]">
                         <mat-accordion>
-                            <mat-expansion-panel [expanded]="true" (afterCollapse)="forgotPasswordForm.reset()"
+                            <mat-expansion-panel [expanded]="true" (afterCollapse)="sendPincodeForm.reset()"
                                 [disabled]="!accountVerificationResponse.emailVerified">
                                 <mat-expansion-panel-header>
                                     <mat-panel-title class="font-weight-500">
                                         Receive an email
                                     </mat-panel-title>
                                 </mat-expansion-panel-header>
-                                <app-field-factory [field]="forgotPasswordForm.get('email')"></app-field-factory>
+                                <app-field-factory [field]="sendPincodeForm.get('email')"></app-field-factory>
                                 <p>By continuing you confirm that you're authorized to access this email account.</p>
                             </mat-expansion-panel>
-                            <mat-expansion-panel (afterCollapse)="forgotPasswordForm.reset()"
+                            <mat-expansion-panel (afterCollapse)="sendPincodeForm.reset()"
                                 [disabled]="!accountVerificationResponse.mobileVerified">
                                 <mat-expansion-panel-header>
                                     <mat-panel-title class="font-weight-500">
                                         Receive a text message
                                     </mat-panel-title>
                                 </mat-expansion-panel-header>
-                                <app-field-factory [field]="forgotPasswordForm.get('mobile')"></app-field-factory>
+                                <app-field-factory [field]="sendPincodeForm.get('mobile')"></app-field-factory>
                                 <p>By continuing you confirm that you're authorized to use this phone number and agree
                                     to receive text messages.</p>
                             </mat-expansion-panel>
@@ -41,11 +41,15 @@
                 </app-form-container>
             </ng-container>
             <ng-container *ngIf="steps[2]">
-                <app-pincode-box [data]="{proxy: sendPincodeType, type: 'account'}" (onSubmit)="checkPincode($event)">
+                <app-pincode-box [data]="{proxy: sendPincodeType, type: 'account'}" (onSubmit)="checkPincode($event)"
+                    (onRetry)="sendPincode(sendPincodeForm?.value)">
                 </app-pincode-box>
             </ng-container>
             <ng-container *ngIf="steps[3]">
-                reset password logic
+                <app-form-container title="Reset password" [formGroup]="resetPasswordForm"
+                    (onSubmit)="resetPassword($event)">
+                    <span form-header>Don't forgot it again ^^</span>
+                </app-form-container>
             </ng-container>
         </div>
     </div>
