--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -8,6 +8,8 @@
         <app-navbar-item *ngIf="$any(item.type) === 'item'" [item]="item"></app-navbar-item>
         <app-navbar-collapse *ngIf="$any(item.type) === 'collapse'" [item]="item"></app-navbar-collapse>
       </ng-container>
+      <app-navbar-item (click)="logout()" class="bottom-0 position-absolute w-100" [item]="logoutNaviagtionItem">
+      </app-navbar-item>
     </nav>
   </div>
   <div sidebar-container>
