add sticky position class

--- a/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.html
+++ b/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.html
@@ -37,7 +37,7 @@
         </div>
     </ng-container>
 </mat-nav-list>
-<mat-chip-list class="px-2">
+<mat-chip-list class="px-2 sticky-bottom h-80">
     <mat-chip *ngFor="let tag of ($tags | async)" [style.background-color]="tag.color" (click)="filterByTag(tag)"
         class="pointer" selected>
     </mat-chip>
